Prevent navbar from collapsing on small screens

--- a/source/css/base.css
+++ b/source/css/base.css
@@ -46,6 +46,22 @@ h4 {
     background-color: #fff;
 }
 
+.navbar-collapse.collapse {
+    display: block!important;
+}
+
+.navbar-nav>li, .navbar-nav {
+    float: left !important;
+}
+
+.navbar-nav.navbar-right:last-child {
+    margin-right: -15px !important;
+}
+
+.navbar-right {
+    float: right!important;
+}
+
 .content {
     font-size: 16px;
     text-align: justify;
